objects/CMPL123__Platform_Features_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Configuration_URL_Classic__c</fullName>
        <description>URL to configuration page.</description>
        <label>Configuration URL Classic</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Configuration_URL_Lightning__c</fullName>
        <description>URL to configuration page.</description>
        <label>Configuration URL Lightning</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Description__c</fullName>
        <description>Field to keep details of the feature.</description>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Enabled_Status__c</fullName>
        <description>Indicate whether the was feature activated or not</description>
        <label>Enabled Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                    <default>true</default>
                    <label>On</label>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Level__c</fullName>
        <description>Number fields that should represent nesting of the feature.</description>
        <label>Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Order__c</fullName>
        <description>Numeric field to determine the order of the feature within the section</description>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Feature__c</fullName>
        <description>Text field with feature name of parent feature</description>
        <label>Parent Feature</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Release_Status__c</fullName>
        <label>Release Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                    <default>true</default>
                    <label>DEV</label>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Tree_Item_Label__c</fullName>
        <label>Tree Item Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature</fullName>
                    <default>true</default>
                    <label>Feature</label>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Node</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Platform Features Configuration</label>
    <listViews>
        <fullName>CMPL123__Features_Configurations_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>CMPL123__Release_Status__c</columns>
        <columns>CMPL123__Enabled_Status__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>Features Configurations View</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Platform Features Configuration</pluralLabel>
</CustomObject>